--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 #home-main {
-    background: url(../assets/img/maps.svg) no-repeat 0 50%;
+    background: url(../img/maps.svg) no-repeat 0 50%;
     z-index: 1;
     position: relative;
     background-repeat: no-repeat;
@@ -152,7 +152,13 @@ html {
 }
 
 .price-card-height {
-    height: 360px;
+    height: 380px;
+}
+
+/* Info CSS */
+.info-header {
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
 
 /* ToS CSS */
@@ -173,7 +179,6 @@ html {
 }
 
 /* Footer CSS */
-
 footer {
     padding: 16px 0;
     background-color: #303030;
